--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,8 @@
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.0",
+    "path": "^0.12.7",
     "pg": "^8.14.1"
   },
   "devDependencies": {
